# hasql-notifications

./: .gitignore  hasql-notifications.cabal  hasql-notify.cabal  stack.yaml
src/Hasql/: Notification.hs
test/Hasql/: NotificationSpec.hs
