name:                hasql-notifications
version:             0.1.0.0
synopsis:            Support for PostgreSQL notifications in hasql
description:         Please see README.md
homepage:            https://github.com/cocreature/hasql-notifications#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2016
category:            Unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Hasql.Notification
  build-depends:       base < 5
                     , bytestring
                     , hasql
                     , mtl
                     , postgresql-libpq
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite hasql-notifications-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:     Hasql.NotificationSpec
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , hasql
                     , hasql-notifications
                     , hspec
                     , postgresql-libpq
                     , text
                     , tmp-postgres
                     , async
                     , postgres-options
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/hasql-notifications
